the Final_Project of the Project

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 <div class="container-fluid pt-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
-            <h1 class="display-4">Please Feel Free To Contact Us</h1>
+            <h3 class="display-8">Please Feel Free To Contact Us</h3>
         </div>
         <div class="row g-5 mb-5">
             <div class="col-lg-4">
@@ -11,7 +11,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-success rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
                         <i class="fa fa-2x fa-location-arrow text-white" style="transform: rotate(15deg);"></i>
                     </div>
-                    <h6 class="mb-0">Bengali Square, Indore, Madhya Pradesh</h6>
+                    <h6 class="mb-0">Shyam Marg Near Vichitravir Hanuman Mandir Shujalpur Mandi , Dist Shujalpur ,465333</h6>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -19,7 +19,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-success rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
                         <i class="fa fa-2x fa-phone text-white" style="transform: rotate(15deg);"></i>
                     </div>
-                    <h6 class="mb-0">+91 9865321452</h6>
+                    <h6 class="mb-0">+91 92023 23220</h6>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -27,19 +27,26 @@
                     <div class="d-flex align-items-center justify-content-center bg-success rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
                         <i class="fa fa-2x fa-envelope-open text-white" style="transform: rotate(15deg);"></i>
                     </div>
-                    <h6 class="mb-0">herbal_dixit@gmail.com</h6>
+                    <h6 class="mb-0">dixitfoundations@gmail.com</h6>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-12" style="height: 500px;">
-                <div class="position-relative h-100">
-                    <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114173.47871466817!2d76.61549758710526!3d23.406676708346088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3963078790a438bb%3A0x3e83a1d16e02a340!2sShujalpur%2C%20Madhya%20Pradesh%20465666!5e0!3m2!1sen!2sin!4v1692092111234!5m2!1sen!2sin"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
+              <div class="position-relative h-100">
+                <iframe
+                  class="position-relative w-100 h-100"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114173.47871466817!2d76.6154976!3d23.4066767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3963078790a438bb%3A0x3e83a1d16e02a340!2sVichitra%20Veer%20Hanuman%20Temple!5e0!3m2!1sen!2sin!4v1692092111234!5m2!1sen!2sin"
+                  frameborder="0"
+                  style="border:0;"
+                  allowfullscreen=""
+                  aria-hidden="false"
+                  tabindex="0"
+                ></iframe>
+              </div>
             </div>
-        </div>
+          </div>
+          
         
         <div class="row justify-content-center position-relative" style="margin-top: -200px; z-index: 1;">
             <div class="col-lg-8">
