--- a/templates/search.html
+++ b/templates/search.html
@@ -15,10 +15,47 @@
                 <div class="input-group">
                     <select name="speciality" class="form-select border-success w-25" style="height: 60px;">
                         <option selected>Select Speciality</option>
-                        <option value="Ayurveda">Ayurveda</option>
+                    
+                        <!-- Ayurveda Specialties -->
+                        <option value="Ayurveda - General">Ayurveda - General</option>
+                        <option value="Panchakarma Therapy">Panchakarma Therapy</option>
+                        <option value="Marma Therapy">Marma Therapy</option>
+                        <option value="Kshar Sutra Therapy">Kshar Sutra Therapy</option>
+                        <option value="Leech Therapy">Leech Therapy</option>
                         <option value="Herbal Medicine">Herbal Medicine</option>
                         <option value="Naturopathy">Naturopathy</option>
+                        <option value="Homeopathy">Homeopathy</option>
+                    
+                        <!-- Male-Specific Specialties -->
+                        <option value="Andrology (Men’s Health)">Andrology (Men’s Health)</option>
+                        <option value="Ayurvedic Urology">Ayurvedic Urology</option>
+                    
+                        <!-- Female-Specific Specialties -->
+                        <option value="Gynecology & Obstetrics">Gynecology & Obstetrics</option>
+                        <option value="PCOS & Hormonal Disorders">PCOS & Hormonal Disorders</option>
+                        <option value="Pregnancy & Postpartum Care">Pregnancy & Postpartum Care</option>
+                    
+                        <!-- Modern Medical Specialties -->
+                        <option value="Cardiology">Cardiology</option>
+                        <option value="Dermatology">Dermatology</option>
+                        <option value="Neurology">Neurology</option>
+                        <option value="Pediatrics">Pediatrics</option>
+                        <option value="Psychiatry">Psychiatry</option>
+                        <option value="Radiology">Radiology</option>
+                        <option value="Surgery">Surgery</option>
+                        <option value="Orthopedics">Orthopedics</option>
+                        <option value="Ophthalmology">Ophthalmology</option>
+                        <option value="Oncology">Oncology</option>
+                    
+                        <!-- Alternative Medicine Specialties -->
+                        <option value="Chiropractic Medicine">Chiropractic Medicine</option>
+                        <option value="Physiotherapy">Physiotherapy</option>
+                        <option value="Acupuncture">Acupuncture</option>
+                        <option value="Unani Medicine">Unani Medicine</option>
+                        <option value="Siddha Medicine">Siddha Medicine</option>
+                        <option value="Yoga Therapy">Yoga Therapy</option>
                     </select>
+                    
                     <input type="text" name="city" class="form-control border-success" placeholder="Search by City" style="width: 25%;">
                     <button class="btn btn-dark border-0" style="width: 25%;">Search</button>
                 </div>
