--- a/templates/about.html
+++ b/templates/about.html
@@ -12,10 +12,16 @@
             <div class="col-lg-7">
                 <div class="mb-4">
                     <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">About Us</h5>
-                    <h1 class="display-4">Your Trusted Partner in Herbal Healthcare</h1>
+                    <h3 class="display-8">Dixit Health Care (Alternative Therapy Treatment Center)</h3>
                 </div>
-                <p>At our herbal healthcare center, we believe in the power of nature to heal and rejuvenate. Our approach combines ancient Ayurvedic wisdom with modern wellness practices to offer comprehensive care for you and your family. Whether you are seeking to enhance your overall well-being or address specific health concerns, our team of qualified herbalists and practitioners are here to guide you. We specialize in personalized treatments, including herbal medicine, detoxification therapies, and lifestyle recommendations, all tailored to your unique needs.</p>
-                <p>Our mission is to empower you to take charge of your health naturally. With a deep commitment to holistic healing, we focus on balancing the body, mind, and spirit. Join us on a journey towards optimal health and discover the transformative benefits of herbal healthcare.</p>
+                <p>Welcome to Dixit Health Care, your trusted destination for holistic healing through natural therapies. Located in Shyam Marg Near Vichitra Veer Hanuman Mandir, Shujalpur Mandi, Dist. Shajapur (M.P.), we are dedicated to offering alternative and Ayurvedic treatments that restore balance and wellness.</p>
+
+                <p>Our expert team of practitioners, led by Dr. Vijay Shyam Dixit (CHW, BAMS (AM), BPT, BEMS, Chiropractic MD, Reg. No.: 22561) and Dr. Pooja Dixit (B.Sc., BEMS, D. Chiro - Specialist in Women's Diseases, Reg. No.: 20769), bring extensive knowledge and experience in holistic healthcare. We integrate Ayurveda, Chiropractic techniques, and other natural therapies to help our patients achieve optimal health.</p>
+
+                <p>Our center offers specialized treatments such as Ayurvedic Panchkarma, Hijama (Cupping Therapy), Ayurveda Consultation, Acupressure, Vastu Consultation, Naturopathy, Foot Massage Therapy, and Chiropractic Therapy (Bone Setting). Each treatment is designed to promote natural healing, relieve pain, and improve overall well-being.</p>
+
+                <p>At Dixit Health Care, we believe in a patient-centric approach, focusing on the root cause of ailments rather than just symptoms. Our goal is to empower individuals with holistic healing techniques, guiding them toward a healthier and more balanced life.</p>
+
                 <div class="row g-3 pt-3">
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
@@ -60,7 +66,7 @@
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
             <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">Doctors</h5>
-            <h1 class="display-4">Best Doctors Teams</h1>
+            <h3 class="display-8">Best Doctors Teams</h3>
         </div>
         <div class="owl-carousel team-carousel position-relative">
             <div class="team-item">
@@ -71,7 +77,7 @@
                     <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                         <div class="mt-auto p-4">
                             <h3>Dr. Vijay Shyam Dixit</h3>
-                            <h6 class="fw-normal fst-italic text-success mb-4">BAMS, BPT</h6>
+                            <h6 class="fw-normal fst-italic text-success mb-4">CHW, BAMS (AM), BPT, BEMS, Chiropractic MD</h6>
                             <p class="m-0">Experience in Gynecological diseases, providing the best treatment for all medical problems.
                                 Experience in chiropractic and Orthopaedics, ensuring top-quality care.</p>
                         </div>
@@ -111,12 +117,12 @@
             <div class="team-item">
                 <div class="row g-0 bg-light rounded overflow-hidden">
                     <div class="col-12 col-sm-5 h-100">
-                        <img class="img-fluid h-100" src="/static/img/team-3.jpg" style="object-fit: cover;" alt="Doctor Image">
+                        <img class="img-fluid h-100" src="/static/img/doctor_123.jpeg" style="object-fit: cover;" alt="Doctor Image">
                     </div>
                     <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                         <div class="mt-auto p-4">
                             <h3>Dr. POOJA DIXIT</h3>
-                            <h6 class="fw-normal fst-italic text-success mb-4">Gynecologist</h6>
+                            <h6 class="fw-normal fst-italic text-success mb-4">B.Sc., BEMS, D. Chiro (Specialist in Women's Diseases)</h6>
                             <p class="m-0">Experience in Gynecological diseases, providing the best treatment for all medical problems.</p>
                         </div>
                         <div class="d-flex mt-auto border-top p-4">
@@ -138,72 +144,85 @@
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
             <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">Services</h5>
-            <h1 class="display-4">Comprehensive Medical Services</h1>
+            <h3 class="display-8">Treatment</h3>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4 bg-success p-3 rounded-circle">
-                        <i class="fa fa-2x fa-user-md text-white"></i>
+                        <i class="fa fa-2x fa-spa text-white"></i>
                     </div>
-                    <h4 class="mb-3">Emergency Care</h4>
-                    <p class="m-0">Our emergency care services are available 24/7, providing immediate attention and life-saving treatments during critical situations. Our team is equipped with state-of-the-art facilities to handle any medical emergency with precision and care.</p>
-                    
+                    <h4 class="mb-3">Ayurvedic Panchkarma</h4>
+                    <p class="m-0">A holistic detoxification therapy that helps cleanse the body of toxins, restore balance, and improve overall well-being through five purification procedures.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4 bg-success p-3 rounded-circle">
-                        <i class="fa fa-2x fa-procedures text-white"></i>
+                        <i class="fa fa-2x fa-hand-holding-medical text-white"></i>
                     </div>
-                    <h4 class="mb-3">Operation & Surgery</h4>
-                    <p class="m-0">We offer a wide range of surgical services, from minor procedures to complex operations, all performed by our experienced surgical team. Our focus is on delivering safe, effective, and minimally invasive surgeries for quicker recovery times.</p>
-                    
+                    <h4 class="mb-3">Hijama (Cupping Therapy)</h4>
+                    <p class="m-0">A traditional healing practice that improves blood circulation, removes toxins, and relieves pain by applying suction cups to specific areas of the body.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4 bg-success p-3 rounded-circle">
-                        <i class="fa fa-2x fa-stethoscope text-white"></i>
+                        <i class="fa fa-2x fa-leaf text-white"></i>
                     </div>
-                    <h4 class="mb-3">Outdoor Checkup</h4>
-                    <p class="m-0">Our outdoor checkup services allow you to receive medical consultations and follow-up care in a comfortable and convenient setting. We offer comprehensive health assessments to ensure your well-being is always our top priority.</p>
-                    
+                    <h4 class="mb-3">Ayurveda Consultation</h4>
+                    <p class="m-0">Personalized health consultations based on Ayurvedic principles to diagnose imbalances and recommend herbal treatments and lifestyle modifications.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4 bg-success p-3 rounded-circle">
-                        <i class="fa fa-2x fa-ambulance text-white"></i>
+                        <i class="fa fa-2x fa-hand-holding-heart text-white"></i>
                     </div>
-                    <h4 class="mb-3">Ambulance Service</h4>
-                    <p class="m-0">Our fast and reliable ambulance services ensure that you receive prompt medical attention when you need it most. We are equipped with advanced life-support systems to transport patients safely to our healthcare facilities.</p>
-                    
+                    <h4 class="mb-3">Acupressure</h4>
+                    <p class="m-0">A natural therapy that stimulates pressure points in the body to relieve pain, reduce stress, and enhance energy flow.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4 bg-success p-3 rounded-circle">
-                        <i class="fa fa-2x fa-pills text-white"></i>
+                        <i class="fa fa-2x fa-compass-drafting text-white"></i>
                     </div>
-                    <h4 class="mb-3">Medicine & Pharmacy</h4>
-                    <p class="m-0">Our on-site pharmacy offers a wide range of prescription medications, over-the-counter drugs, and herbal remedies. We ensure that you have easy access to the medicines you need, along with expert advice from our pharmacists.</p>
-                    
+                    <h4 class="mb-3">Vastu Consultation</h4>
+                    <p class="m-0">Expert guidance on harmonizing your living or working space with Vastu principles to promote positive energy and well-being.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4 bg-success p-3 rounded-circle">
-                        <i class="fa fa-2x fa-microscope text-white"></i>
+                        <i class="fa fa-2x fa-tree text-white"></i>
                     </div>
-                    <h4 class="mb-3">Blood Testing</h4>
-                    <p class="m-0">Our laboratory offers a full range of blood testing services to help diagnose and monitor health conditions. With accurate results and quick turnaround times, we support your ongoing health management with precision.</p>
-                    
+                    <h4 class="mb-3">Naturopathy</h4>
+                    <p class="m-0">A natural healing approach that utilizes diet, exercise, herbal remedies, and lifestyle changes to restore health and prevent diseases.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                        <i class="fa fa-2x fa-feather-alt text-white"></i>
+                    </div>
+                    <h4 class="mb-3">Foot Massage Therapy</h4>
+                    <p class="m-0">A therapeutic massage technique that enhances blood circulation, relieves stress, and promotes overall relaxation.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                        <i class="fa fa-2x fa-bone text-white"></i>
+                    </div>
+                    <h4 class="mb-3">Chiropractic Therapy (Bone Setting)</h4>
+                    <p class="m-0">A non-invasive treatment that focuses on spinal alignment and musculoskeletal adjustments to relieve pain and enhance mobility.</p>
                 </div>
             </div>
         </div>
     </div>
-</div>  
+</div>
+
 <!-- Services End -->
 
 
