--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,9 +6,9 @@
             <div class="col-lg-3 col-md-6">
                 <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Get In Touch</h4>
                 <p class="mb-4">Easily connect with your organization</p>
-                <p class="mb-2"><i class="fa fa-map-marker-alt text-dark me-3"></i>Bengli Square, Teen Imali, Indore</p>
-                <p class="mb-2"><i class="fa fa-envelope text-dark me-3"></i>herbal_dixit@gmail.com</p>
-                <p class="mb-0"><i class="fa fa-phone-alt text-dark me-3"></i>+91 986532145</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-dark me-3"></i>Shyam Marg Near Vichitravir Hanuman Mandir Shujalpur Mandi , Dist Shujalpur ,465333</p>
+                <p class="mb-2"><i class="fa fa-envelope text-dark me-3"></i>dixitfoundations@gmail.com</p>
+                <p class="mb-0"><i class="fa fa-phone-alt text-dark me-3"></i>+91 92023 23220</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
