the colour change of the website

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,48 +11,45 @@
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
-                    <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">About Us</h5>
+                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="color: #09143C !important;">About Us</h5>
                     <h3 class="display-8">Dixit Health Care (Alternative Therapy Treatment Center)</h3>
                 </div>
                 <p>Welcome to Dixit Health Care, your trusted destination for holistic healing through natural therapies. Located in Shyam Marg Near Vichitra Veer Hanuman Mandir, Shujalpur Mandi, Dist. Shajapur (M.P.), we are dedicated to offering alternative and Ayurvedic treatments that restore balance and wellness.</p>
-
                 <p>Our expert team of practitioners, led by Dr. Vijay Shyam Dixit (CHW, BAMS (AM), BPT, BEMS, Chiropractic MD, Reg. No.: 22561) and Dr. Pooja Dixit (B.Sc., BEMS, D. Chiro - Specialist in Women's Diseases, Reg. No.: 20769), bring extensive knowledge and experience in holistic healthcare. We integrate Ayurveda, Chiropractic techniques, and other natural therapies to help our patients achieve optimal health.</p>
-
                 <p>Our center offers specialized treatments such as Ayurvedic Panchkarma, Hijama (Cupping Therapy), Ayurveda Consultation, Acupressure, Vastu Consultation, Naturopathy, Foot Massage Therapy, and Chiropractic Therapy (Bone Setting). Each treatment is designed to promote natural healing, relieve pain, and improve overall well-being.</p>
-
                 <p>At Dixit Health Care, we believe in a patient-centric approach, focusing on the root cause of ailments rather than just symptoms. Our goal is to empower individuals with holistic healing techniques, guiding them toward a healthier and more balanced life.</p>
 
                 <div class="row g-3 pt-3">
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-leaf text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Natural<small class="d-block text-success">Remedies</small></h6>
+                            <h6 class="mb-0">Natural<small class="d-block text-primary" style="color: #09143C !important;">Remedies</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-heartbeat text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Holistic<small class="d-block text-success">Care</small></h6>
+                            <h6 class="mb-0">Holistic<small class="d-block text-primary" style="color: #09143C !important;">Care</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-hand-holding-heart text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Personalized<small class="d-block text-success">Consultations</small></h6>
+                            <h6 class="mb-0">Personalized<small class="d-block text-primary" style="color: #09143C !important;">Consultations</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-seedling text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Sustainable<small class="d-block text-success">Practices</small></h6>
+                            <h6 class="mb-0">Sustainable<small class="d-block text-primary" style="color: #09143C !important;">Practices</small></h6>
                         </div>
                     </div>                
                 </div>
@@ -62,6 +59,7 @@
 </div>
 
 
+<!-- Doctors Start --> 
 <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
@@ -82,10 +80,18 @@
                                 Experience in chiropractic and Orthopaedics, ensuring top-quality care.</p>
                         </div>
                         <div class="d-flex mt-auto border-top p-4">
-                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#" style="background-color:rgb(9, 20, 60);">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#" style="background-color: #09143C;">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle" href="#" style="background-color: #09143C;">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
                         </div>
+                        
+                        
                     </div>
                 </div>
             </div>
@@ -113,7 +119,7 @@
                     </div>
                 </div>
             </div> {% endcomment %}
-
+            
             <div class="team-item">
                 <div class="row g-0 bg-light rounded overflow-hidden">
                     <div class="col-12 col-sm-5 h-100">
@@ -126,10 +132,16 @@
                             <p class="m-0">Experience in Gynecological diseases, providing the best treatment for all medical problems.</p>
                         </div>
                         <div class="d-flex mt-auto border-top p-4">
-                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#" style="background-color: #09143C;">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#" style="background-color: #09143C;">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle" href="#" style="background-color: #09143C;">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -143,13 +155,13 @@
 <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
-            <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">Services</h5>
+            <h5 class="d-inline-block text-uppercase border-bottom border-5" style="color: #09143C !important;">Services</h5>
             <h3 class="display-8">Treatment</h3>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-spa text-white"></i>
                     </div>
                     <h4 class="mb-3">Ayurvedic Panchkarma</h4>
@@ -158,7 +170,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-hand-holding-medical text-white"></i>
                     </div>
                     <h4 class="mb-3">Hijama (Cupping Therapy)</h4>
@@ -167,7 +179,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-leaf text-white"></i>
                     </div>
                     <h4 class="mb-3">Ayurveda Consultation</h4>
@@ -176,7 +188,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-hand-holding-heart text-white"></i>
                     </div>
                     <h4 class="mb-3">Acupressure</h4>
@@ -185,7 +197,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-compass-drafting text-white"></i>
                     </div>
                     <h4 class="mb-3">Vastu Consultation</h4>
@@ -194,7 +206,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-tree text-white"></i>
                     </div>
                     <h4 class="mb-3">Naturopathy</h4>
@@ -203,7 +215,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-feather-alt text-white"></i>
                     </div>
                     <h4 class="mb-3">Foot Massage Therapy</h4>
@@ -212,7 +224,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-bone text-white"></i>
                     </div>
                     <h4 class="mb-3">Chiropractic Therapy (Bone Setting)</h4>
@@ -222,7 +234,7 @@
         </div>
     </div>
 </div>
-
+<!-- Services End -->
 <!-- Services End -->
 
 
