--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,24 +8,24 @@
         <div class="row g-5 mb-5">
             <div class="col-lg-4">
                 <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                    <div class="d-flex align-items-center justify-content-center bg-success rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                        <i class="fa fa-2x fa-location-arrow text-white" style="transform: rotate(15deg);"></i>
+                    <div class="d-flex align-items-center justify-content-center bg-dark rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
+                        <i class="fa fa-2x fa-location-arrow text-white" style="transform: rotate(15deg); color: #09143C;"></i>
                     </div>
                     <h6 class="mb-0">Shyam Marg Near Vichitravir Hanuman Mandir Shujalpur Mandi , Dist Shujalpur ,465333</h6>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                    <div class="d-flex align-items-center justify-content-center bg-success rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                        <i class="fa fa-2x fa-phone text-white" style="transform: rotate(15deg);"></i>
+                    <div class="d-flex align-items-center justify-content-center bg-dark rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
+                        <i class="fa fa-2x fa-phone text-white" style="transform: rotate(15deg); color: #09143C;"></i>
                     </div>
                     <h6 class="mb-0">+91 92023 23220</h6>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                    <div class="d-flex align-items-center justify-content-center bg-success rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                        <i class="fa fa-2x fa-envelope-open text-white" style="transform: rotate(15deg);"></i>
+                    <div class="d-flex align-items-center justify-content-center bg-dark rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
+                        <i class="fa fa-2x fa-envelope-open text-white" style="transform: rotate(15deg); color: #09143C;"></i>
                     </div>
                     <h6 class="mb-0">dixitfoundations@gmail.com</h6>
                 </div>
@@ -46,8 +46,7 @@
               </div>
             </div>
           </div>
-          
-        
+
         <div class="row justify-content-center position-relative" style="margin-top: -200px; z-index: 1;">
             <div class="col-lg-8">
                 <div class="bg-white rounded p-5 m-5 mb-0">
@@ -67,7 +66,7 @@
                                 <textarea class="form-control bg-light border-0" name="message" rows="5" placeholder="Message"></textarea>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-success w-100 py-3" type="submit">Send Message</button>
+                                <button class="btn w-100 py-3" type="submit" style="background-color: #09143C; color: white;">Send Message</button>
                             </div>
                         </div>
                     </form>                        
