--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,5 @@
-
 <!-- Footer Start -->
-<div class="container-fluid bg-success text-light mt-5 py-5">
+<div class="container-fluid text-light" style="background-color: #09143C; margin-top: 5rem; padding-top: 5rem; padding-bottom: 5rem;">
     <div class="container py-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
@@ -13,17 +12,17 @@
             <div class="col-lg-3 col-md-6">
                 <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-light mb-2" href="{% url "index"%}"><i class="fa fa-angle-right me-2"></i>Home</a>
-                    <a class="text-light mb-2" href="{% url "about"%}"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                    <a class="text-light mb-2" href="{% url "blog"%}"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
-                    <a class="text-light" href="{% url "contact"%}"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+                    <a class="text-light mb-2" href="{% url 'index' %}"><i class="fa fa-angle-right me-2"></i>Home</a>
+                    <a class="text-light mb-2" href="{% url 'about' %}"><i class="fa fa-angle-right me-2"></i>About Us</a>
+                    <a class="text-light mb-2" href="{% url 'blog' %}"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
+                    <a class="text-light" href="{% url 'contact' %}"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Popular Links</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-light mb-2" href="{% url "team"%}"><i class="fa fa-angle-right me-2"></i>Products</a>
-                    <a class="text-light mb-2" href="{% url "healthcare_centre" %}"><i class="fa fa-angle-right me-2"></i>Login</a>
+                    <a class="text-light mb-2" href="{% url 'team' %}"><i class="fa fa-angle-right me-2"></i>Products</a>
+                    <a class="text-light mb-2" href="{% url 'healthcare_centre' %}"><i class="fa fa-angle-right me-2"></i>Login</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -37,7 +36,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-success text-light border-top border-secondary py-4">
+<div class="container-fluid text-light border-top border-secondary py-4" style="background-color: #09143C;">
     <div class="container">
         <div class="row g-5">
             <div class="col-md-6 text-center text-md-start">
@@ -48,20 +47,18 @@
 </div>
 <!-- Footer End -->
 
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/static/lib/easing/easing.min.js"></script>
+<script src="/static/lib/waypoints/waypoints.min.js"></script>
+<script src="/static/lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="/static/lib/tempusdominus/js/moment.min.js"></script>
+<script src="/static/lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="/static/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/lib/easing/easing.min.js"></script>
-    <script src="/static/lib/waypoints/waypoints.min.js"></script>
-    <script src="/static/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/static/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/static/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/static/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="/static/js/main.js"></script>
+<!-- Template Javascript -->
+<script src="/static/js/main.js"></script>
 </body>
 
 </html>
