--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
-                    <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">About Us</h5>
+                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="color: #09143C !important;">About Us</h5>
                     <h3 class="display-8">Dixit Health Care (Alternative Therapy Treatment Center)</h3>
                 </div>
                 <p>Welcome to Dixit Health Care, your trusted destination for holistic healing through natural therapies. Located in Shyam Marg Near Vichitra Veer Hanuman Mandir, Shujalpur Mandi, Dist. Shajapur (M.P.), we are dedicated to offering alternative and Ayurvedic treatments that restore balance and wellness.</p>
@@ -37,34 +37,34 @@
                 <div class="row g-3 pt-3">
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-leaf text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Natural<small class="d-block text-success">Remedies</small></h6>
+                            <h6 class="mb-0">Natural<small class="d-block text-primary" style="color: #09143C !important;">Remedies</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-heartbeat text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Holistic<small class="d-block text-success">Care</small></h6>
+                            <h6 class="mb-0">Holistic<small class="d-block text-primary" style="color: #09143C !important;">Care</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-hand-holding-heart text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Personalized<small class="d-block text-success">Consultations</small></h6>
+                            <h6 class="mb-0">Personalized<small class="d-block text-primary" style="color: #09143C !important;">Consultations</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                            <div class="p-3 rounded-circle d-inline-block" style="background-color: #09143C;">
                                 <i class="fa fa-3x fa-seedling text-white mb-3"></i>
                             </div>
-                            <h6 class="mb-0">Sustainable<small class="d-block text-success">Practices</small></h6>
+                            <h6 class="mb-0">Sustainable<small class="d-block text-primary" style="color: #09143C !important;">Practices</small></h6>
                         </div>
                     </div>                
                 </div>
@@ -74,6 +74,7 @@
 </div>
 
 
+<!-- Doctors Start --> 
 <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
@@ -155,13 +156,13 @@
 <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
-            <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">Services</h5>
+            <h5 class="d-inline-block text-uppercase border-bottom border-5" style="color: #09143C !important;">Services</h5>
             <h3 class="display-8">Treatment</h3>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-spa text-white"></i>
                     </div>
                     <h4 class="mb-3">Ayurvedic Panchkarma</h4>
@@ -170,7 +171,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-hand-holding-medical text-white"></i>
                     </div>
                     <h4 class="mb-3">Hijama (Cupping Therapy)</h4>
@@ -179,7 +180,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-leaf text-white"></i>
                     </div>
                     <h4 class="mb-3">Ayurveda Consultation</h4>
@@ -188,7 +189,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-hand-holding-heart text-white"></i>
                     </div>
                     <h4 class="mb-3">Acupressure</h4>
@@ -197,7 +198,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-compass-drafting text-white"></i>
                     </div>
                     <h4 class="mb-3">Vastu Consultation</h4>
@@ -206,7 +207,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-tree text-white"></i>
                     </div>
                     <h4 class="mb-3">Naturopathy</h4>
@@ -215,7 +216,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-feather-alt text-white"></i>
                     </div>
                     <h4 class="mb-3">Foot Massage Therapy</h4>
@@ -224,7 +225,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
+                    <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
                         <i class="fa fa-2x fa-bone text-white"></i>
                     </div>
                     <h4 class="mb-3">Chiropractic Therapy (Bone Setting)</h4>
@@ -235,11 +236,12 @@
     </div>
 </div>
 <!-- Services End -->
+
 <!-- About End -->
 
 
 <!-- Search Start -->
-<div class="container-fluid bg-success my-5 py-5">
+<div class="container-fluid" style="background-color: #09143C; margin-top: 5rem; padding-top: 5rem; padding-bottom: 5rem;">
     <div class="container py-5">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
             <h5 class="d-inline-block text-white text-uppercase border-bottom border-5">Find A Herbal Expert</h5>
@@ -250,9 +252,9 @@
             <form method="POST" action="{% url 'doctorsearch' %}">
                 {% csrf_token %}
                 <div class="input-group">
-                    <select name="speciality" class="form-select border-success w-25" style="height: 60px;">
+                    <select name="speciality" class="form-select" style="height: 60px; border-color: #09143C;">
                         <option selected>Select Speciality</option>
-                    
+
                         <!-- Ayurveda Specialties -->
                         <option value="Ayurveda - General">Ayurveda - General</option>
                         <option value="Panchakarma Therapy">Panchakarma Therapy</option>
@@ -262,16 +264,16 @@
                         <option value="Herbal Medicine">Herbal Medicine</option>
                         <option value="Naturopathy">Naturopathy</option>
                         <option value="Homeopathy">Homeopathy</option>
-                    
+
                         <!-- Male-Specific Specialties -->
                         <option value="Andrology (Men’s Health)">Andrology (Men’s Health)</option>
                         <option value="Ayurvedic Urology">Ayurvedic Urology</option>
-                    
+
                         <!-- Female-Specific Specialties -->
                         <option value="Gynecology & Obstetrics">Gynecology & Obstetrics</option>
                         <option value="PCOS & Hormonal Disorders">PCOS & Hormonal Disorders</option>
                         <option value="Pregnancy & Postpartum Care">Pregnancy & Postpartum Care</option>
-                    
+
                         <!-- Modern Medical Specialties -->
                         <option value="Cardiology">Cardiology</option>
                         <option value="Dermatology">Dermatology</option>
@@ -283,7 +285,7 @@
                         <option value="Orthopedics">Orthopedics</option>
                         <option value="Ophthalmology">Ophthalmology</option>
                         <option value="Oncology">Oncology</option>
-                    
+
                         <!-- Alternative Medicine Specialties -->
                         <option value="Chiropractic Medicine">Chiropractic Medicine</option>
                         <option value="Physiotherapy">Physiotherapy</option>
@@ -292,9 +294,9 @@
                         <option value="Siddha Medicine">Siddha Medicine</option>
                         <option value="Yoga Therapy">Yoga Therapy</option>
                     </select>
-                    
-                    <input type="text" name="city" class="form-control border-success" placeholder="Search by City" style="width: 25%;">
-                    <button class="btn btn-dark border-0" style="width: 25%;">Search</button>
+
+                    <input type="text" name="city" class="form-control" placeholder="Search by City" style="width: 25%; border-color: #09143C;">
+                    <button class="btn" style="width: 25%; background-color: #09143C; color: white; border: none;">Search</button>
                 </div>
             </form>
         </div>
@@ -319,6 +321,7 @@
         </div>
     </div>
 </div>
+
 <!-- Search End -->
 
 
