--- a/templates/about.html
+++ b/templates/about.html
@@ -198,11 +198,11 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4 p-3 rounded-circle" style="background-color: #09143C;">
-                        <i class="fa fa-2x fa-compass-drafting text-white"></i>
+                        <i class="fa-solid fa-compass text-white fa-2x"></i>
                     </div>
                     <h4 class="mb-3">Vastu Consultation</h4>
                     <p class="m-0">Expert guidance on harmonizing your living or working space with Vastu principles to promote positive energy and well-being.</p>
-                </div>
+                </div>  
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
